Primer commit: Agregar proyecto de QR Estatico

--- a/detalle.html
+++ b/detalle.html
@@ -132,7 +132,7 @@
         <header class="d-flex justify-content-between align-items-center fixed-top py-2 border-bottom bg-white">
             <!-- Logo 1 alineado a la izquierda -->
             <div class="ms-2 me-2" style="flex: 1;">
-                <img src="C:/GITHUB/GIMNASIO/QR Estatico/Imagenes/LogoGimnasio.png" alt="Logo 1" class="img-fluid">
+                <img src="Imagenes/LogoGimnasio.png" alt="Logo 1" class="img-fluid">
             </div>
         </header>
 
