--- a/instrucciones.html
+++ b/instrucciones.html
@@ -108,7 +108,7 @@
         <header class="d-flex justify-content-between align-items-center fixed-top py-2 border-bottom bg-white">
             <!-- Logo 1 alineado a la izquierda -->
             <div class="ms-2 me-2" style="flex: 1;">
-                <img src="C:/GITHUB/GIMNASIO/QR Estatico/Imagenes/LogoGimnasio.png" alt="Logo 1" class="img-fluid">
+                <img src="Imagenes/LogoGimnasio.png" alt="Logo 1" class="img-fluid">
             </div>
         </header>
 
@@ -138,13 +138,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="C:/GITHUB/GIMNASIO/QR Estatico/Imagenes/caminadora1.jpeg" class="d-block w-100" alt="Caminadora 1">
+						<img src="Imagenes/caminadora1.jpeg" class="d-block w-100" alt="Caminadora 1">
 					</div>
 					<div class="carousel-item">
-						<img src="C:/GITHUB/GIMNASIO/QR Estatico/Imagenes/caminadora2.jpeg" class="d-block w-100" alt="Caminadora 2">
+						<img src="Imagenes/caminadora2.jpeg" class="d-block w-100" alt="Caminadora 2">
 					</div>
 					<div class="carousel-item">
-						<img src="C:/GITHUB/GIMNASIO/QR Estatico/Imagenes/caminadora3.jpeg" class="d-block w-100" alt="Caminadora 3">
+						<img src="Imagenes/caminadora3.jpeg" class="d-block w-100" alt="Caminadora 3">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
